--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/express_testi.js"
-
+    "start": "node src/index.js",
+    "dev" : "nodemon src/index.js"
   },
   "private": true,
   "dependencies": {
     "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "npm": "^11.6.0"
   }
 }
