--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev" : "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "private": true,
   "dependencies": {
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0"
   }
