--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
