--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "npm": "^11.6.0"
+    "npm": "^11.6.0",
+    "prettier": "^3.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
