--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
